# django

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: action.yml
app/backend/: settings.py  urls.py
app/core/management/commands/: wait_for_db.py
app/core/test/: test_commands.py
